--- a/checkSheetBuilder/index.html
+++ b/checkSheetBuilder/index.html
@@ -167,6 +167,7 @@
             box-shadow: 0 3px 12px rgba(0,0,0,0.2);
             border-radius: 6px;
             overflow: hidden;
+            margin-bottom: 20px;
         }
         
         .sheet-header {
